Updated BirdMarshaller